// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InboxPage matches snapshot 1`] = `
<Page
  scrollingDisabled={false}
  title="InboxPage.ordersTitle"
>
  <LayoutSideNavigation
    className={null}
    containerClassName={null}
    rootClassName={null}
  >
    <LayoutWrapperTopbar
      className={null}
      rootClassName={null}
    >
      <withRouter(Connect(TopbarContainerComponent))
        className="topbar"
        currentPage="InboxPage"
        desktopClassName="desktopTopbar"
        mobileRootClassName="mobileTopbar"
      />
      <UserNav
        className={null}
        rootClassName={null}
        selectedPageName="InboxPage"
      />
    </LayoutWrapperTopbar>
    <withViewport(LayoutWrapperManageListingsSideNavComponent)
      currentTab="InboxTab"
      extraTabs={
        Array [
          Object {
            "linkProps": Object {
              "name": "InboxPage",
            },
            "selected": true,
            "text": <span>
              <Memo(MemoizedFormattedMessage)
                id="InboxPage.salesTabTitle"
              />
            </span>,
          },
        ]
      }
    />
    <LayoutWrapperMain
      className="inboxPageWrapper"
      rootClassName={null}
    >
      <div
        className="titleWrapper"
      >
        <h1
          className="title"
        >
          <MemoizedFormattedMessage
            id="InboxPage.title"
          />
        </h1>
        <div
          className="inboxFilters"
        >
          <NamedLink
            className="filterLink activeFilterLink"
            name="InboxPage"
          >
            All
          </NamedLink>
          <NamedLink
            className="filterLink"
            name="InboxPage"
            to={
              Object {
                "search": "state=active",
              }
            }
          >
            Active
          </NamedLink>
        </div>
      </div>
      <ul
        className="itemList"
      >
        <li
          className="listItem"
          key="order-1"
        >
          <InboxItem
            currentUser={
              Object {
                "attributes": Object {
                  "banned": false,
                  "deleted": false,
                  "email": "provider-user-id@example.com",
                  "emailVerified": true,
                  "profile": Object {
                    "abbreviatedName": "provider-user-id abbreviated name",
                    "displayName": "provider-user-id display name",
                    "firstName": "provider-user-id first name",
                    "lastName": "provider-user-id last name",
                  },
                },
                "id": UUID {
                  "_sdkType": "UUID",
                  "uuid": "provider-user-id",
                },
                "profileImage": Object {},
                "type": "currentUser",
              }
            }
            intl={
              Object {
                "formatDate": [Function],
                "formatMessage": [Function],
                "formatNumber": [Function],
                "formatPlural": [Function],
                "formatRelativeTime": [Function],
                "formatTime": [Function],
                "now": [Function],
              }
            }
            stateData={
              Object {
                "bookingClassName": "bookingActionNeeded",
                "lastTransitionedAtClassName": "lastTransitionedAtEmphasized",
                "nameClassName": "nameNotEmphasized",
                "state": "InboxPage.stateRentPaid",
                "stateClassName": "stateNoActionNeeded",
              }
            }
            tx={
              Object {
                "attributes": Object {
                  "createdAt": 2017-05-01T00:00:00.000Z,
                  "lastTransition": "transition/confirm-payment",
                  "lastTransitionedAt": 2017-01-15T00:00:00.000Z,
                  "lineItems": Array [
                    Object {
                      "code": "line-item/night",
                      "includeFor": Array [
                        "customer",
                        "provider",
                      ],
                      "lineTotal": Money {
                        "_sdkType": "Money",
                        "amount": 1000,
                        "currency": "USD",
                      },
                      "quantity": "1",
                      "reversal": false,
                      "unitPrice": Money {
                        "_sdkType": "Money",
                        "amount": 1000,
                        "currency": "USD",
                      },
                    },
                    Object {
                      "code": "line-item/provider-commission",
                      "includeFor": Array [
                        "provider",
                      ],
                      "lineTotal": Money {
                        "_sdkType": "Money",
                        "amount": -100,
                        "currency": "USD",
                      },
                      "reversal": false,
                      "unitPrice": Money {
                        "_sdkType": "Money",
                        "amount": -100,
                        "currency": "USD",
                      },
                    },
                  ],
                  "payinTotal": Money {
                    "_sdkType": "Money",
                    "amount": 1000,
                    "currency": "USD",
                  },
                  "payoutTotal": Money {
                    "_sdkType": "Money",
                    "amount": 900,
                    "currency": "USD",
                  },
                  "transitions": Array [
                    Object {
                      "by": "customer",
                      "createdAt": 2017-05-01T00:00:00.000Z,
                      "transition": "transition/request-payment",
                    },
                    Object {
                      "by": "customer",
                      "createdAt": 2017-05-01T00:00:01.000Z,
                      "transition": "transition/confirm-payment",
                    },
                    Object {
                      "by": "provider",
                      "createdAt": 2017-06-01T00:00:00.000Z,
                      "transition": "transition/accept",
                    },
                  ],
                },
                "booking": Object {
                  "attributes": Object {
                    "displayEnd": 2017-02-16T00:00:00.000Z,
                    "displayStart": 2017-02-15T00:00:00.000Z,
                    "end": 2017-02-16T00:00:00.000Z,
                    "start": 2017-02-15T00:00:00.000Z,
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "booking1",
                  },
                  "type": "booking",
                },
                "customer": Object {
                  "attributes": Object {
                    "banned": false,
                    "deleted": false,
                    "profile": Object {
                      "abbreviatedName": "TT",
                      "displayName": "customer-user-id display name",
                    },
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "customer-user-id",
                  },
                  "type": "user",
                },
                "id": UUID {
                  "_sdkType": "UUID",
                  "uuid": "order-1",
                },
                "listing": null,
                "provider": Object {
                  "attributes": Object {
                    "banned": false,
                    "deleted": false,
                    "profile": Object {
                      "abbreviatedName": "TT",
                      "displayName": "provider-user-id display name",
                    },
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "provider-user-id",
                  },
                  "type": "user",
                },
                "reviews": Array [],
                "type": "transaction",
              }
            }
            type="order"
            unitType="line-item/night"
          />
        </li>
        <li
          className="listItem"
          key="order-2"
        >
          <InboxItem
            currentUser={
              Object {
                "attributes": Object {
                  "banned": false,
                  "deleted": false,
                  "email": "provider-user-id@example.com",
                  "emailVerified": true,
                  "profile": Object {
                    "abbreviatedName": "provider-user-id abbreviated name",
                    "displayName": "provider-user-id display name",
                    "firstName": "provider-user-id first name",
                    "lastName": "provider-user-id last name",
                  },
                },
                "id": UUID {
                  "_sdkType": "UUID",
                  "uuid": "provider-user-id",
                },
                "profileImage": Object {},
                "type": "currentUser",
              }
            }
            intl={
              Object {
                "formatDate": [Function],
                "formatMessage": [Function],
                "formatNumber": [Function],
                "formatPlural": [Function],
                "formatRelativeTime": [Function],
                "formatTime": [Function],
                "now": [Function],
              }
            }
            stateData={
              Object {
                "bookingClassName": "bookingActionNeeded",
                "lastTransitionedAtClassName": "lastTransitionedAtEmphasized",
                "nameClassName": "nameNotEmphasized",
                "state": "InboxPage.stateRentPaid",
                "stateClassName": "stateNoActionNeeded",
              }
            }
            tx={
              Object {
                "attributes": Object {
                  "createdAt": 2017-05-01T00:00:00.000Z,
                  "lastTransition": "transition/confirm-payment",
                  "lastTransitionedAt": 2016-01-15T00:00:00.000Z,
                  "lineItems": Array [
                    Object {
                      "code": "line-item/night",
                      "includeFor": Array [
                        "customer",
                        "provider",
                      ],
                      "lineTotal": Money {
                        "_sdkType": "Money",
                        "amount": 1000,
                        "currency": "USD",
                      },
                      "quantity": "1",
                      "reversal": false,
                      "unitPrice": Money {
                        "_sdkType": "Money",
                        "amount": 1000,
                        "currency": "USD",
                      },
                    },
                    Object {
                      "code": "line-item/provider-commission",
                      "includeFor": Array [
                        "provider",
                      ],
                      "lineTotal": Money {
                        "_sdkType": "Money",
                        "amount": -100,
                        "currency": "USD",
                      },
                      "reversal": false,
                      "unitPrice": Money {
                        "_sdkType": "Money",
                        "amount": -100,
                        "currency": "USD",
                      },
                    },
                  ],
                  "payinTotal": Money {
                    "_sdkType": "Money",
                    "amount": 1000,
                    "currency": "USD",
                  },
                  "payoutTotal": Money {
                    "_sdkType": "Money",
                    "amount": 900,
                    "currency": "USD",
                  },
                  "transitions": Array [
                    Object {
                      "by": "customer",
                      "createdAt": 2017-05-01T00:00:00.000Z,
                      "transition": "transition/request-payment",
                    },
                    Object {
                      "by": "customer",
                      "createdAt": 2017-05-01T00:00:01.000Z,
                      "transition": "transition/confirm-payment",
                    },
                    Object {
                      "by": "provider",
                      "createdAt": 2017-06-01T00:00:00.000Z,
                      "transition": "transition/accept",
                    },
                  ],
                },
                "booking": Object {
                  "attributes": Object {
                    "displayEnd": 2017-03-16T00:00:00.000Z,
                    "displayStart": 2017-03-15T00:00:00.000Z,
                    "end": 2017-03-16T00:00:00.000Z,
                    "start": 2017-03-15T00:00:00.000Z,
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "booking2",
                  },
                  "type": "booking",
                },
                "customer": Object {
                  "attributes": Object {
                    "banned": false,
                    "deleted": false,
                    "profile": Object {
                      "abbreviatedName": "TT",
                      "displayName": "customer-user-id display name",
                    },
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "customer-user-id",
                  },
                  "type": "user",
                },
                "id": UUID {
                  "_sdkType": "UUID",
                  "uuid": "order-2",
                },
                "listing": null,
                "provider": Object {
                  "attributes": Object {
                    "banned": false,
                    "deleted": false,
                    "profile": Object {
                      "abbreviatedName": "TT",
                      "displayName": "provider-user-id display name",
                    },
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "provider-user-id",
                  },
                  "type": "user",
                },
                "reviews": Array [],
                "type": "transaction",
              }
            }
            type="order"
            unitType="line-item/night"
          />
        </li>
      </ul>
    </LayoutWrapperMain>
    <LayoutWrapperFooter
      className={null}
      rootClassName={null}
    >
      <injectIntl(Footer) />
    </LayoutWrapperFooter>
  </LayoutSideNavigation>
</Page>
`;

exports[`InboxPage matches snapshot 2`] = `
<div
  className="item"
>
  <div
    className="itemAvatar"
  >
    <a
      className="mediumAvatar"
      href="/u/provider-user-id"
      onClick={[Function]}
      onMouseOver={[Function]}
      onTouchStart={[Function]}
      style={Object {}}
      title="provider-user-id display name"
    >
      <span
        className="initials"
      >
        FC
      </span>
    </a>
  </div>
  <a
    className="itemLink"
    href="/order/order-1/details"
    onClick={[Function]}
    onMouseOver={[Function]}
    onTouchStart={[Function]}
    style={Object {}}
    title={null}
  >
    <div
      className="rowNotificationDot"
    />
    <div
      className="itemInfo"
    >
      <div
        className="itemUsername nameNotEmphasized"
      >
        <span
          className=""
        >
          provider-user-id display name
        </span>
      </div>
      <div
        className="listingName"
      />
    </div>
    <div
      className="itemState"
    >
      <div
        className="stateName stateNoActionNeeded"
      >
        InboxPage.stateRentPaid
      </div>
      <div
        className="lastTransitionedAt lastTransitionedAtEmphasized"
        title="2017-01-15 00:00"
      >
        2017-01-15
      </div>
    </div>
  </a>
</div>
`;

exports[`InboxPage matches snapshot 3`] = `
<Page
  scrollingDisabled={false}
  title="InboxPage.ordersTitle"
>
  <LayoutSideNavigation
    className={null}
    containerClassName={null}
    rootClassName={null}
  >
    <LayoutWrapperTopbar
      className={null}
      rootClassName={null}
    >
      <withRouter(Connect(TopbarContainerComponent))
        className="topbar"
        currentPage="InboxPage"
        desktopClassName="desktopTopbar"
        mobileRootClassName="mobileTopbar"
      />
      <UserNav
        className={null}
        rootClassName={null}
        selectedPageName="InboxPage"
      />
    </LayoutWrapperTopbar>
    <withViewport(LayoutWrapperManageListingsSideNavComponent)
      currentTab="InboxTab"
      extraTabs={
        Array [
          Object {
            "linkProps": Object {
              "name": "InboxPage",
            },
            "selected": true,
            "text": <span>
              <Memo(MemoizedFormattedMessage)
                id="InboxPage.salesTabTitle"
              />
            </span>,
          },
        ]
      }
    />
    <LayoutWrapperMain
      className="inboxPageWrapper"
      rootClassName={null}
    >
      <div
        className="titleWrapper"
      >
        <h1
          className="title"
        >
          <MemoizedFormattedMessage
            id="InboxPage.title"
          />
        </h1>
        <div
          className="inboxFilters"
        >
          <NamedLink
            className="filterLink activeFilterLink"
            name="InboxPage"
          >
            All
          </NamedLink>
          <NamedLink
            className="filterLink"
            name="InboxPage"
            to={
              Object {
                "search": "state=active",
              }
            }
          >
            Active
          </NamedLink>
        </div>
      </div>
      <ul
        className="itemList"
      >
        <li
          className="listItem"
          key="sale-1"
        >
          <InboxItem
            currentUser={
              Object {
                "attributes": Object {
                  "banned": false,
                  "deleted": false,
                  "email": "customer-user-id@example.com",
                  "emailVerified": true,
                  "profile": Object {
                    "abbreviatedName": "customer-user-id abbreviated name",
                    "displayName": "customer-user-id display name",
                    "firstName": "customer-user-id first name",
                    "lastName": "customer-user-id last name",
                  },
                },
                "id": UUID {
                  "_sdkType": "UUID",
                  "uuid": "customer-user-id",
                },
                "profileImage": Object {},
                "type": "currentUser",
              }
            }
            intl={
              Object {
                "formatDate": [Function],
                "formatMessage": [Function],
                "formatNumber": [Function],
                "formatPlural": [Function],
                "formatRelativeTime": [Function],
                "formatTime": [Function],
                "now": [Function],
              }
            }
            stateData={
              Object {
                "bookingClassName": "bookingActionNeeded",
                "lastTransitionedAtClassName": "lastTransitionedAtEmphasized",
                "nameClassName": "nameEmphasized",
                "state": "InboxPage.stateRentPaid",
                "stateClassName": "stateNoActionNeeded",
              }
            }
            tx={
              Object {
                "attributes": Object {
                  "createdAt": 2017-05-01T00:00:00.000Z,
                  "lastTransition": "transition/confirm-payment",
                  "lastTransitionedAt": 2017-01-15T00:00:00.000Z,
                  "lineItems": Array [
                    Object {
                      "code": "line-item/night",
                      "includeFor": Array [
                        "customer",
                        "provider",
                      ],
                      "lineTotal": Money {
                        "_sdkType": "Money",
                        "amount": 1000,
                        "currency": "USD",
                      },
                      "quantity": "1",
                      "reversal": false,
                      "unitPrice": Money {
                        "_sdkType": "Money",
                        "amount": 1000,
                        "currency": "USD",
                      },
                    },
                    Object {
                      "code": "line-item/provider-commission",
                      "includeFor": Array [
                        "provider",
                      ],
                      "lineTotal": Money {
                        "_sdkType": "Money",
                        "amount": -100,
                        "currency": "USD",
                      },
                      "reversal": false,
                      "unitPrice": Money {
                        "_sdkType": "Money",
                        "amount": -100,
                        "currency": "USD",
                      },
                    },
                  ],
                  "payinTotal": Money {
                    "_sdkType": "Money",
                    "amount": 1000,
                    "currency": "USD",
                  },
                  "payoutTotal": Money {
                    "_sdkType": "Money",
                    "amount": 900,
                    "currency": "USD",
                  },
                  "transitions": Array [
                    Object {
                      "by": "customer",
                      "createdAt": 2017-05-01T00:00:00.000Z,
                      "transition": "transition/request-payment",
                    },
                    Object {
                      "by": "customer",
                      "createdAt": 2017-05-01T00:00:01.000Z,
                      "transition": "transition/confirm-payment",
                    },
                    Object {
                      "by": "provider",
                      "createdAt": 2017-06-01T00:00:00.000Z,
                      "transition": "transition/accept",
                    },
                  ],
                },
                "booking": Object {
                  "attributes": Object {
                    "displayEnd": 2017-02-16T00:00:00.000Z,
                    "displayStart": 2017-02-15T00:00:00.000Z,
                    "end": 2017-02-16T00:00:00.000Z,
                    "start": 2017-02-15T00:00:00.000Z,
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "booking1",
                  },
                  "type": "booking",
                },
                "customer": Object {
                  "attributes": Object {
                    "banned": false,
                    "deleted": false,
                    "profile": Object {
                      "abbreviatedName": "TT",
                      "displayName": "customer-user-id display name",
                    },
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "customer-user-id",
                  },
                  "type": "user",
                },
                "id": UUID {
                  "_sdkType": "UUID",
                  "uuid": "sale-1",
                },
                "listing": null,
                "provider": Object {
                  "attributes": Object {
                    "banned": false,
                    "deleted": false,
                    "profile": Object {
                      "abbreviatedName": "TT",
                      "displayName": "provider-user-id display name",
                    },
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "provider-user-id",
                  },
                  "type": "user",
                },
                "reviews": Array [],
                "type": "transaction",
              }
            }
            type="sale"
            unitType="line-item/night"
          />
        </li>
        <li
          className="listItem"
          key="sale-2"
        >
          <InboxItem
            currentUser={
              Object {
                "attributes": Object {
                  "banned": false,
                  "deleted": false,
                  "email": "customer-user-id@example.com",
                  "emailVerified": true,
                  "profile": Object {
                    "abbreviatedName": "customer-user-id abbreviated name",
                    "displayName": "customer-user-id display name",
                    "firstName": "customer-user-id first name",
                    "lastName": "customer-user-id last name",
                  },
                },
                "id": UUID {
                  "_sdkType": "UUID",
                  "uuid": "customer-user-id",
                },
                "profileImage": Object {},
                "type": "currentUser",
              }
            }
            intl={
              Object {
                "formatDate": [Function],
                "formatMessage": [Function],
                "formatNumber": [Function],
                "formatPlural": [Function],
                "formatRelativeTime": [Function],
                "formatTime": [Function],
                "now": [Function],
              }
            }
            stateData={
              Object {
                "bookingClassName": "bookingActionNeeded",
                "lastTransitionedAtClassName": "lastTransitionedAtEmphasized",
                "nameClassName": "nameEmphasized",
                "state": "InboxPage.stateRentPaid",
                "stateClassName": "stateNoActionNeeded",
              }
            }
            tx={
              Object {
                "attributes": Object {
                  "createdAt": 2017-05-01T00:00:00.000Z,
                  "lastTransition": "transition/confirm-payment",
                  "lastTransitionedAt": 2016-01-15T00:00:00.000Z,
                  "lineItems": Array [
                    Object {
                      "code": "line-item/night",
                      "includeFor": Array [
                        "customer",
                        "provider",
                      ],
                      "lineTotal": Money {
                        "_sdkType": "Money",
                        "amount": 1000,
                        "currency": "USD",
                      },
                      "quantity": "1",
                      "reversal": false,
                      "unitPrice": Money {
                        "_sdkType": "Money",
                        "amount": 1000,
                        "currency": "USD",
                      },
                    },
                    Object {
                      "code": "line-item/provider-commission",
                      "includeFor": Array [
                        "provider",
                      ],
                      "lineTotal": Money {
                        "_sdkType": "Money",
                        "amount": -100,
                        "currency": "USD",
                      },
                      "reversal": false,
                      "unitPrice": Money {
                        "_sdkType": "Money",
                        "amount": -100,
                        "currency": "USD",
                      },
                    },
                  ],
                  "payinTotal": Money {
                    "_sdkType": "Money",
                    "amount": 1000,
                    "currency": "USD",
                  },
                  "payoutTotal": Money {
                    "_sdkType": "Money",
                    "amount": 900,
                    "currency": "USD",
                  },
                  "transitions": Array [
                    Object {
                      "by": "customer",
                      "createdAt": 2017-05-01T00:00:00.000Z,
                      "transition": "transition/request-payment",
                    },
                    Object {
                      "by": "customer",
                      "createdAt": 2017-05-01T00:00:01.000Z,
                      "transition": "transition/confirm-payment",
                    },
                    Object {
                      "by": "provider",
                      "createdAt": 2017-06-01T00:00:00.000Z,
                      "transition": "transition/accept",
                    },
                  ],
                },
                "booking": Object {
                  "attributes": Object {
                    "displayEnd": 2017-03-16T00:00:00.000Z,
                    "displayStart": 2017-03-15T00:00:00.000Z,
                    "end": 2017-03-16T00:00:00.000Z,
                    "start": 2017-03-15T00:00:00.000Z,
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "booking2",
                  },
                  "type": "booking",
                },
                "customer": Object {
                  "attributes": Object {
                    "banned": false,
                    "deleted": false,
                    "profile": Object {
                      "abbreviatedName": "TT",
                      "displayName": "customer-user-id display name",
                    },
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "customer-user-id",
                  },
                  "type": "user",
                },
                "id": UUID {
                  "_sdkType": "UUID",
                  "uuid": "sale-2",
                },
                "listing": null,
                "provider": Object {
                  "attributes": Object {
                    "banned": false,
                    "deleted": false,
                    "profile": Object {
                      "abbreviatedName": "TT",
                      "displayName": "provider-user-id display name",
                    },
                  },
                  "id": UUID {
                    "_sdkType": "UUID",
                    "uuid": "provider-user-id",
                  },
                  "type": "user",
                },
                "reviews": Array [],
                "type": "transaction",
              }
            }
            type="sale"
            unitType="line-item/night"
          />
        </li>
      </ul>
    </LayoutWrapperMain>
    <LayoutWrapperFooter
      className={null}
      rootClassName={null}
    >
      <injectIntl(Footer) />
    </LayoutWrapperFooter>
  </LayoutSideNavigation>
</Page>
`;

exports[`InboxPage matches snapshot 4`] = `
<div
  className="item"
>
  <div
    className="itemAvatar"
  >
    <a
      className="mediumAvatar"
      href="/u/provider-user-id"
      onClick={[Function]}
      onMouseOver={[Function]}
      onTouchStart={[Function]}
      style={Object {}}
      title="provider-user-id display name"
    >
      <span
        className="initials"
      >
        FC
      </span>
    </a>
  </div>
  <a
    className="itemLink"
    href="/order/sale-1/details"
    onClick={[Function]}
    onMouseOver={[Function]}
    onTouchStart={[Function]}
    style={Object {}}
    title={null}
  >
    <div
      className="rowNotificationDot"
    />
    <div
      className="itemInfo"
    >
      <div
        className="itemUsername nameEmphasized"
      >
        <span
          className=""
        >
          provider-user-id display name
        </span>
      </div>
      <div
        className="listingName"
      />
    </div>
    <div
      className="itemState"
    >
      <div
        className="stateName stateNoActionNeeded"
      >
        InboxPage.stateRentPaid
      </div>
      <div
        className="lastTransitionedAt lastTransitionedAtEmphasized"
        title="2017-01-15 00:00"
      >
        2017-01-15
      </div>
    </div>
  </a>
</div>
`;
